--- a/style.css
+++ b/style.css
@@ -1,64 +1,137 @@
 @charset "UTF-8";
+
+/******************************
+ header
+******************************/
 .header {
-  height: 150px;
-  margin-bottom: 20px;
-  border: 1px solid #000;
+	background-color: #C8FFF4;
 }
-.header_contents {
-  width: 980px;
+.header__wrap {
+	
+  width: 85%;
   margin: 0 auto;
-  border: 1px solid #000;
-}
-.logo {
-  width: 200px;
-  font-size: auto;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  border: 1px solid #000;
 }
-.logo img {
-  /* width: 50px; */
-  height: 100px;
-  margin-right: 10px;
+@media screen and (max-width: 768px) {
+  .header__wrap {
+    width: 100%;
+		flex-direction: column;
+  }
 }
-.contents {
-  width: 980px;
+.header__logo img {
+  width: 54px;
+  /* height: 76px; */
+}
+.header__menu {
+  display: flex;
+	list-style: none;
+}
+
+.header__menu li {
+  width: 100px;
+}
+.header__menu li a {
+  display: block;
+	width: 100%;
+	align-items: center;
+}
+/**********************************
+ main
+**********************************/
+.main {
+}
+.main__kv {
+	background: url(./img/cat_sofa.jpg) no-repeat center center;
+  height: 70vh;
+}
+.main__about {
+  width: 85%;
+  margin: 20px auto;
+}
+.main__about--ttl {
+  text-align: center;
+  margin-bottom: 60px;
+}
+.main__about--logo {
+  width: 40%;
   margin: 0 auto;
 }
-.visual {
-  background: url(https://picsum.photos/id/0/1920/1080)
-    no-repeat center center;
+.main__about--txt {
+  margin: 45px 0 60px;
+  text-align: center;
+}
+
+.main__service {
+  width: 85%;
+  margin: 20px auto;
+}
+.main__service--message {
+}
+
+.main__service--list {
+	list-style: none;
+  display: flex;
+}
+@media screen and (max-width: 768px){
+	.main__service--list {
+	list-style: none;
+	flex-direction: column;
+}
+}
+.main__service--list li {
+  flex: 1;
+}
+.main__service--list li a {
+  display: block;
+  height: 100%;
+}
+.main__service--list li img {
+  width: 100%;
+}
+.main__service--list li h3 {
+  margin: 50px 0 30px 0;
+}
+.main__service--list li p {
+}
+.main__news {
+  width: 85%;
+  margin: 20px auto;
+  padding: 0 20px 0;
+}
+.main__news--ttl {
+}
+.main__news--list {
+	list-style: none;
+}
+.main__news--list li {
+}
+.main__news--list li a {
+  display: block;
+}
+.main__news--item {
+  display: flex;
+}
+.main__news--day {
   display: flex;
   align-items: center;
 }
-.copy {
-  width: 320px;
-  height: 250px;
-  margin-left: 700px;
-  color: aliceblue;
-  font: normal 32px/2em sans-serif;
-  align-items: center;
-  display: flex;
+.main__news--data {
 }
-.text_contents {
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  border: 1px solid #ccc;
-}
-.text {
-  width: 380px;
-  border: 1px solid #000;
-}
-.menu {
-  width: 380px;
-  border: 1px solid #000;
-}
+
+/**********************************
+ footer
+**********************************/
 .footer {
-  height: 120px;
-  margin-top: 30px;
-  border: 1px solid #000;
+  padding: 90px 0 70px;
 }
-.footer_contents {
-  width: 980px;
+
+.footer__logo {
+  width: 100px;
+  margin: 0 auto;
+}
+.footer__copy {
+  margin-top: 30px;
+  text-align: center;
 }
