--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 .header__menu li a {
   display: block;
-	width: 100%;
+	/* width: 100%; */
 	align-items: center;
 }
 /**********************************
